Client parity with the official Python and TypeScript SDKs
Response parsing: score legend values are JSON values (an object- or
array-valued legend used to fail the whole response); answers missing their
payload field, a 200 without a model, and a models envelope without an array
are parse failures; usage tolerates {} and null counts; quoted numbers are
rejected; UnknownAnswer keeps its JSON. Nine SDK response bodies pinned with
provenance.

Transport: a base URL keeps its path prefix; retryAfterMillis() and
serverMessage() on TypeSafeRequestException; 408 is retryable; environment
values are trimmed; Accept, User-Agent, X-TypeSafe-SDK and X-TypeSafe-Runtime
are sent and, with the bearer, applied after the caller's extendRequest; the
models GET carries no content type; connection and timeout causes pinned;
non-positive timeouts rejected.

Request side: one-sided noul criteria, extraBody for unmodelled top-level
fields, Question.raw for unmodelled question shapes, null state and null score
levels rejected, lone surrogates escaped, Question.scoreLevels for rich levels.

PIT: client 214/214, request 189/189, response 124/124.